Bug 465950 - Window outline does not use contrast color when a titlebar color is set
Summary: Window outline does not use contrast color when a titlebar color is set
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: window decoration (other bugs)
Version First Reported In: 5.27.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-17 17:36 UTC by Natalie Clarius
Modified: 2023-11-29 16:34 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
Outline for active window is not contrast colored (5.64 KB, image/png)
2023-02-17 17:36 UTC, Natalie Clarius
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Natalie Clarius 2023-02-17 17:36:13 UTC
Created attachment 156383 [details]
Outline for active window is not contrast colored

SUMMARY
***
I have nothing against the new window outline, but with a custom titlebar color the outline color looks unexpected: I use a light color scheme with the titlebars of my active windows green, and instead of a contrast of the background color (which would be the same as for inactive windows, whose outline is grey/black), the outline appears in a bright green which looks a bit off - see attachment.
***

STEPS TO REPRODUCE
1. Use a color scheme with a custom active window titlebar color
2. Use Breeze window decoration 

OBSERVED RESULT
Outline of active window is contrast of background color (same as for inactive windows)

EXPECTED RESULT
Outline of active window is a lighter version of the titlebar color

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.27.0
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel Version: 6.1.12-arch1-1 (64-bit)
Comment 1 Nate Graham 2023-02-17 23:18:21 UTC
> EXPECTED RESULT
> Outline of active window is a lighter version of the titlebar color
Isn't that what you've got? Your titlebar is medium green and the outline is light green.
Comment 2 Natalie Clarius 2023-02-17 23:22:07 UTC
Yes... I got the expected and actual result the wrong way round.
Comment 3 Nate Graham 2023-02-17 23:34:47 UTC
I think this may be intentional, but I'll let Akseli confirm.
Comment 4 Akseli Lahtinen 2023-02-17 23:38:12 UTC
Yes, this is intentional. You can see the discussion about it here: https://invent.kde.org/plasma/breeze/-/merge_requests/241#note_533922
Comment 5 Natalie Clarius 2023-02-17 23:49:46 UTC
Ah okay. Looks kinda different though than in that screenshot: https://invent.kde.org/plasma/breeze/uploads/1be717c4c11422cff0878ded660a079a/Screenshot_20221001_025502.png This is the one you were going with, right? In your screenshot it looks like with a light color scheme the outline is a darker version of the titlebar color which I agree looks quite nice, but with my green the outline is brighter that that's what I thought looks kinda off in combination with the darker outline for inactive windows.
Comment 6 Akseli Lahtinen 2023-02-18 00:28:56 UTC
I wonder if something went wrong with the lighten/darken values that the outlines use. Maybe they're too strong?

Need to look into that.
Comment 7 Bug Janitor Service 2023-03-04 17:06:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/294
Comment 8 Natalie Clarius 2023-11-19 03:16:56 UTC
Git commit ca38e7058568a7f4a9167cb0af57f6e13e880273 by Natalie Clarius.
Committed on 04/03/2023 at 17:55.
Pushed by nclarius into branch 'kdecoration-outline-color-frame'.

kdecoration: take outline color from frame color, not titlebar color

It makes more sense to set contrast with the side borders (eg dark gray around a light color scheme) rather than with the already colorful titlebar (eg light green around a deep green titlebar and otherwise light colored window).

M  +1    -2    kdecoration/breezedecoration.cpp

https://invent.kde.org/plasma/breeze/-/commit/ca38e7058568a7f4a9167cb0af57f6e13e880273
Comment 9 Natalie Clarius 2023-11-28 22:43:36 UTC
Git commit 093593fda69f639c2d96cc9174fdfc077b30ac27 by Natalie Clarius.
Committed on 28/11/2023 at 22:55.
Pushed by nclarius into branch 'master'.

kdecoration: take outline color from frame color, not titlebar color

It makes more sense to set contrast with the side borders (eg dark gray around a light color scheme) rather than with the already colorful titlebar (eg light green around a deep green titlebar and otherwise light colored window).

M  +1    -2    kdecoration/breezedecoration.cpp

https://invent.kde.org/plasma/breeze/-/commit/093593fda69f639c2d96cc9174fdfc077b30ac27