kdecoration: take outline color from frame color, not titlebar color

It makes more sense to set contrast with the side borders (eg dark gray around a light color scheme) rather than with the already colorful titlebar (eg light green around a deep green titlebar and otherwise light colored window).

BUG: 465950